# esp-huawei

./: .gitignore  2m_ota_no_ble_partitions.csv  CMakeLists.txt  README.md  README.txt  sdkconfig.defaults  sdkconfig.old
components/button/: CMakeLists.txt
components/huawei_iot/: CMakeLists.txt  Kconfig  huawei-iot.c  huawei-ota.c  url_parse.c
components/huawei_iot/include/: huawei-iot.h  url_parse.h
components/router/: CMakeLists.txt  router.c
components/router/include/: router.h
main/: CMakeLists.txt  app_main.c
